# sidlc

./: .clang-format  .clangd  CMakeLists.txt  block.c  block.h  config.h.in
cmake/: UseSIDLC.cmake
core/: CMakeLists.txt  main.cc
include/: arch_abi.hh  ast.hh  c_handler.hh  c_header_generator.hh  c_source_generator.hh  lang_info.hh  lexer.hh  parser.hh
interfaces/: accelerated_graphics.sidl  block.sidl  byte_stream.sidl  console.sidl  directory.sidl  fileinfo.sidl  framebuffer.sidl  hid.sidl  process.sidl  thread.sidl  video_control.sidl
lang/: CMakeLists.txt  ast.cc  c_handler.cc  c_header_generator.cc  c_source_generator.cc  lexer.cc  parser.cc
